update swagger annotations, postman collection and readme for low stock events send email notifications
